==> behzadh/STM32_Sensor/STM32CubeFunctionPack_DATALOG1_V1.3.0/STM32/STM32L4R9ZI-STWIN/Applications/HSDatalog/Src/usbd_conf.c <==
#include "usbd_conf.h"
#include "usbd_wcid_streaming.h"

void HAL_PCD_MspInit(PCD_HandleTypeDef *hpcd)
{
  GPIO_InitTypeDef GPIO_InitStruct;

  /* Configure USB FS GPIOs */
  __HAL_RCC_GPIOA_CLK_ENABLE();

  /* Configure DM DP Pins */
  GPIO_InitStruct.Pin = (GPIO_PIN_11 | GPIO_PIN_12);
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF10_OTG_FS;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

  /* Enable USB FS Clock */
  __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

  /* Set USB FS Interrupt priority */
  HAL_NVIC_SetPriority(OTG_FS_IRQn, 2, 0);

  /* Enable USB FS Interrupt */
  HAL_NVIC_EnableIRQ(OTG_FS_IRQn);

}

void HAL_PCD_MspDeInit(PCD_HandleTypeDef *hpcd)
{
  /* Disable USB FS Clock */
  __HAL_RCC_USB_OTG_FS_CLK_DISABLE();
  __HAL_RCC_SYSCFG_CLK_DISABLE();
}

USBD_StatusTypeDef USBD_LL_Init(USBD_HandleTypeDef *pdev)
{
  /* Set LL Driver parameters */
  hpcd_USB_OTG_FS.Instance = USB_OTG_FS;
  hpcd_USB_OTG_FS.Init.dev_endpoints = 8;
  hpcd_USB_OTG_FS.Init.use_dedicated_ep1 = 0;
  hpcd_USB_OTG_FS.Init.ep0_mps = 0x40;
  hpcd_USB_OTG_FS.Init.dma_enable = 0;
  hpcd_USB_OTG_FS.Init.low_power_enable = 0;
  hpcd_USB_OTG_FS.Init.lpm_enable = 0;
  hpcd_USB_OTG_FS.Init.battery_charging_enable = 0;
  hpcd_USB_OTG_FS.Init.phy_itface = PCD_PHY_EMBEDDED;
  hpcd_USB_OTG_FS.Init.Sof_enable = 1;
  hpcd_USB_OTG_FS.Init.speed = PCD_SPEED_FULL;
  hpcd_USB_OTG_FS.Init.vbus_sensing_enable = 0;
  /* Link The driver to the stack */
  hpcd_USB_OTG_FS.pData = pdev;
  pdev->pData = &hpcd_USB_OTG_FS;
  /* Initialize LL Driver */
  HAL_PCD_Init(&hpcd_USB_OTG_FS);

  HAL_PCD_SetRxFiFo(&hpcd_USB_OTG_FS, 0x40);
  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 0, 0x40);

  /*FIFO allocation: equally divided respect to the endpoints
   This may be not the optimal solution, depending on the
   datarate flowing on each eandpoint */

  uint16_t fifoSizePerEp = (320 - 2 * (0x40)) / (N_IN_ENDPOINTS);

  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 1, fifoSizePerEp);
#if (N_IN_ENDPOINTS >1)  
  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 2, fifoSizePerEp);
#if (N_IN_ENDPOINTS >2)    
  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 3, fifoSizePerEp);
#if (N_IN_ENDPOINTS >3)  
  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 4, fifoSizePerEp);
#if (N_IN_ENDPOINTS >4)  
  HAL_PCD_SetTxFiFo(&hpcd_USB_OTG_FS, 5, fifoSizePerEp);
#endif
#endif  
#endif
#endif

  return USBD_OK;
}
